immich/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
spec:
  entryPoints:
    - websecureext
  routes:
    - kind: Rule
      match: Host(`gsaab.dev`)
      services:
        - name: immich-server
          port: 2283
  tls:
    secretName: immich-tls
